localization/v2.4.x/site/it/faq/product_faq.md
---
id: product_faq.md
summary: >-
  Trovate le risposte alle domande più frequenti sul database vettoriale più
  avanzato al mondo.
title: FAQ sul prodotto
---
<h1 id="Product-FAQ" class="common-anchor-header">FAQ sul prodotto<button data-href="#Product-FAQ" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><h4 id="How-much-does-Milvus-cost" class="common-anchor-header">Quanto costa Milvus?</h4><p>Milvus è un progetto open-source gratuito al 100%.</p>
<p>Quando si utilizza Milvus per scopi di produzione o distribuzione, si prega di attenersi alla <a href="http://www.apache.org/licenses/LICENSE-2.0">licenza Apache 2.0</a>.</p>
<p>Zilliz, l'azienda che sta dietro a Milvus, offre anche una versione cloud completamente gestita della piattaforma per coloro che non vogliono costruire e mantenere la propria istanza distribuita. <a href="https://zilliz.com/cloud">Zilliz Cloud</a> mantiene automaticamente l'affidabilità dei dati e consente agli utenti di pagare solo per ciò che utilizzano.</p>
<h4 id="Does-Milvus-support-non-x86-architectures" class="common-anchor-header">Milvus supporta architetture non x86?</h4><p>Milvus non può essere installato o eseguito su piattaforme non-x86.</p>
<p>La CPU deve supportare uno dei seguenti set di istruzioni per eseguire Milvus: SSE4.2, AVX, AVX2, AVX512. Si tratta di set di istruzioni SIMD dedicati a x86.</p>
<h4 id="What-is-the-maximum-dataset-size-Milvus-can-handle" class="common-anchor-header">Qual è la dimensione massima del set di dati che Milvus può gestire?</h4><p>In teoria, la dimensione massima del set di dati che Milvus può gestire è determinata dall'hardware su cui viene eseguito, in particolare dalla memoria di sistema e dallo storage:</p>
<ul>
<li>Milvus carica in memoria tutte le collezioni e le partizioni specificate prima di eseguire le query. Pertanto, la dimensione della memoria determina la quantità massima di dati che Milvus può interrogare.</li>
<li>Quando si aggiungono a Milvus nuove entità e schemi relativi alle collezioni (attualmente è supportato solo MinIO per la persistenza dei dati), lo storage del sistema determina la dimensione massima consentita dei dati inseriti.</li>
</ul>
<h4 id="Where-does-Milvus-store-data" class="common-anchor-header">Dove vengono memorizzati i dati in Milvus?</h4><p>Milvus tratta due tipi di dati: i dati inseriti e i metadati.</p>
<p>I dati inseriti, compresi i dati vettoriali, i dati scalari e lo schema specifico della collezione, sono memorizzati in un archivio persistente come log incrementale. Milvus supporta diversi backend di archiviazione a oggetti, tra cui <a href="https://min.io/">MinIO</a>, <a href="https://aws.amazon.com/s3/?nc1=h_ls">AWS S3</a>, <a href="https://cloud.google.com/storage?hl=en#object-storage-for-companies-of-all-sizes">Google Cloud Storage</a> (GCS), <a href="https://azure.microsoft.com/en-us/products/storage/blobs">Azure Blob Storage</a>, <a href="https://www.alibabacloud.com/product/object-storage-service">Alibaba Cloud OSS</a> e <a href="https://www.tencentcloud.com/products/cos">Tencent Cloud Object Storage</a> (COS).</p>
<p>I metadati sono generati all'interno di Milvus. Ogni modulo Milvus ha i propri metadati che vengono memorizzati in etcd.</p>
<h4 id="Why-is-there-no-vector-data-in-etcd" class="common-anchor-header">Perché non ci sono dati vettoriali in etcd?</h4><p>etcd memorizza i metadati dei moduli Milvus; MinIO memorizza le entità.</p>
<h4 id="Does-Milvus-support-inserting-and-searching-data-simultaneously" class="common-anchor-header">Milvus supporta l'inserimento e la ricerca di dati contemporaneamente?</h4><p>Sì. Le operazioni di inserimento e di interrogazione sono gestite da due moduli distinti e indipendenti tra loro. Dal punto di vista del client, un'operazione di inserimento è completa quando i dati inseriti entrano nella coda dei messaggi. Tuttavia, i dati inseriti non sono ricercabili finché non vengono caricati sul nodo di interrogazione. Se la dimensione del segmento non raggiunge la soglia di costruzione dell'indice (512 MB per impostazione predefinita), Milvus ricorre alla ricerca bruta e le prestazioni della query possono diminuire.</p>
<h4 id="Can-vectors-with-duplicate-primary-keys-be-inserted-into-Milvus" class="common-anchor-header">È possibile inserire in Milvus vettori con chiavi primarie duplicate?</h4><p>Sì, Milvus non controlla se i vettori hanno chiavi primarie duplicate. Milvus non controlla se le chiavi primarie dei vettori sono duplicate.</p>
<h4 id="When-vectors-with-duplicate-primary-keys-are-inserted-does-Milvus-treat-it-as-an-update-operation" class="common-anchor-header">Quando si inseriscono vettori con chiavi primarie duplicate, Milvus li tratta come un'operazione di aggiornamento?</h4><p>No. Milvus non supporta attualmente le operazioni di aggiornamento e non controlla se le chiavi primarie delle entità sono duplicate. È responsabilità dell'utente assicurarsi che le chiavi primarie delle entità siano uniche e, in caso contrario, Milvus potrebbe contenere più entità con chiavi primarie duplicate.</p>
<p>In questo caso, la copia dei dati che viene restituita quando viene interrogata rimane un comportamento sconosciuto. Questa limitazione sarà risolta nelle prossime versioni.</p>
<h4 id="What-is-the-maximum-length-of-self-defined-entity-primary-keys" class="common-anchor-header">Qual è la lunghezza massima delle chiavi primarie autodefinite delle entità?</h4><p>Le chiavi primarie delle entità devono essere numeri interi non negativi a 64 bit.</p>
<h4 id="What-is-the-maximum-amount-of-data-that-can-be-added-per-insert-operation" class="common-anchor-header">Qual è la quantità massima di dati che possono essere aggiunti per ogni operazione di inserimento?</h4><p>Un'operazione di inserimento non deve superare i 1.024 MB. Si tratta di un limite imposto da gRPC.</p>
<h4 id="Does-collection-size-impact-query-performance-when-searching-in-a-specific-partition" class="common-anchor-header">La dimensione della raccolta influisce sulle prestazioni della query quando si effettua una ricerca in una partizione specifica?</h4><p>No. Se si specificano le partizioni per una ricerca, Milvus cerca solo nelle partizioni specificate.</p>
<h4 id="Does-Milvus-load-the-entire-collection-when-partitions-are-specified-for-a-search" class="common-anchor-header">Milvus carica l'intera collezione quando vengono specificate le partizioni per una ricerca?</h4><p>No. Milvus ha un comportamento diverso. I dati devono essere caricati in memoria prima della ricerca.</p>
<ul>
<li>Se si conoscono le partizioni in cui si trovano i dati, chiamare <code translate="no">load_partition()</code> per caricare la partizione o le partizioni desiderate <em>, quindi</em> specificare la partizione o le partizioni nella chiamata al metodo <code translate="no">search()</code>.</li>
<li>Se non si conoscono le partizioni esatte, chiamare <code translate="no">load_collection()</code> prima di chiamare <code translate="no">search()</code>.</li>
<li>Se non si caricano le collezioni o le partizioni prima della ricerca, Milvus restituisce un errore.</li>
</ul>
<h4 id="Can-indexes-be-created-after-inserting-vectors" class="common-anchor-header">È possibile creare indici dopo aver inserito i vettori?</h4><p>Sì. Se in precedenza è stato creato un indice per una collezione da <code translate="no">create_index()</code>, Milvus creerà automaticamente un indice per i vettori inseriti successivamente. Tuttavia, Milvus non costruisce un indice finché i nuovi vettori inseriti non riempiono un intero segmento e il nuovo file di indice creato è separato da quello precedente.</p>
<h4 id="How-are-the-FLAT-and-IVFFLAT-indexes-different" class="common-anchor-header">Come si differenziano gli indici FLAT e IVF_FLAT?</h4><p>L'indice IVF_FLAT divide lo spazio vettoriale in cluster di elenchi. Al valore predefinito di 16.384, Milvus confronta le distanze tra il vettore di destinazione e i centroidi di tutti i 16.384 cluster per restituire i cluster più vicini. Milvus confronta quindi le distanze tra il vettore target e i vettori nei cluster selezionati per ottenere i vettori più vicini. A differenza di IVF_FLAT, FLAT confronta direttamente le distanze tra il vettore target e ogni altro vettore.</p>
<p>Quando il numero totale di vettori è approssimativamente pari a nlist, la distanza tra IVF_FLAT e FLAT è minima in termini di requisiti di calcolo e prestazioni di ricerca. Tuttavia, quando il numero di vettori supera nlist di un fattore due o più, IVF_FLAT inizia a mostrare vantaggi in termini di prestazioni.</p>
<p>Per ulteriori informazioni, vedere <a href="/docs/it/index.md">Indice dei vettori</a>.</p>
<h4 id="How-does-Milvus-flush-data" class="common-anchor-header">Come fa Milvus a scaricare i dati?</h4><p>Milvus restituisce un successo quando i dati inseriti vengono caricati nella coda dei messaggi. Tuttavia, i dati non vengono ancora scaricati sul disco. Quindi il nodo dati di Milvus scrive i dati nella coda dei messaggi in un archivio persistente come log incrementale. Se si chiama <code translate="no">flush()</code>, il nodo dati è costretto a scrivere immediatamente tutti i dati nella coda dei messaggi nell'archivio persistente.</p>
<h4 id="What-is-normalization-Why-is-normalization-needed" class="common-anchor-header">Cos'è la normalizzazione? Perché la normalizzazione è necessaria?</h4><p>La normalizzazione si riferisce al processo di conversione di un vettore in modo tale che la sua norma sia uguale a 1. Se il prodotto interno viene utilizzato per calcolare la somiglianza tra vettori, i vettori devono essere normalizzati. Dopo la normalizzazione, il prodotto interno equivale alla somiglianza del coseno.</p>
<p>Per ulteriori informazioni, consultare <a href="https://en.wikipedia.org/wiki/Unit_vector">Wikipedia</a>.</p>
<h4 id="Why-do-Euclidean-distance-L2-and-inner-product-IP-return-different-results" class="common-anchor-header">Perché la distanza euclidea (L2) e il prodotto interno (IP) danno risultati diversi?</h4><p>Per i vettori normalizzati, la distanza euclidea (L2) è matematicamente equivalente al prodotto interno (IP). Se queste metriche di somiglianza danno risultati diversi, verificare se i vettori sono normalizzati.</p>
<h4 id="Is-there-a-limit-to-the-total-number-of-collections-and-partitions-in-Milvus" class="common-anchor-header">C'è un limite al numero totale di collezioni e partizioni in Milvus?</h4><p>Sì. È possibile creare fino a 65.535 collezioni in un'istanza di Milvus. Quando si calcola il numero di collezioni esistenti, Milvus conta tutte le collezioni con frammenti e partizioni al loro interno.</p>
<p>Ad esempio, supponiamo di aver già creato 100 raccolte, con 2 frammenti e 4 partizioni in 60 di esse e con 1 frammento e 12 partizioni nelle altre 40 raccolte. Il numero attuale di raccolte può essere calcolato come:</p>
<pre><code translate="no">60 * 2 * 4 + 40 * 1 * 12 = 960
<button class="copy-code-btn"></button></code></pre>
<h4 id="Why-do-I-get-fewer-than-k-vectors-when-searching-for-topk-vectors" class="common-anchor-header">Perché ottengo meno di k vettori quando cerco i vettori di <code translate="no">topk</code>?</h4><p>Tra gli indici supportati da Milvus, IVF_FLAT e IVF_SQ8 implementano il metodo di clustering k-means. Uno spazio dati viene suddiviso in <code translate="no">nlist</code> cluster e i vettori inseriti vengono distribuiti in questi cluster. Milvus seleziona quindi i cluster <code translate="no">nprobe</code> più vicini e confronta le distanze tra il vettore target e tutti i vettori nei cluster selezionati per restituire i risultati finali.</p>
<p>Se <code translate="no">nlist</code> e <code translate="no">topk</code> sono grandi e nprobe è piccolo, il numero di vettori nei cluster nprobe può essere inferiore a <code translate="no">k</code>. Pertanto, quando si cercano i vettori più vicini a <code translate="no">topk</code>, il numero di vettori restituiti è inferiore a <code translate="no">k</code>.</p>
<p>Per evitare questo problema, provare a impostare <code translate="no">nprobe</code> più grande e <code translate="no">nlist</code> e <code translate="no">k</code> più piccoli.</p>
<p>Per ulteriori informazioni, vedere <a href="/docs/it/index.md">Indice vettoriale</a>.</p>
<h4 id="What-is-the-maximum-vector-dimension-supported-in-Milvus" class="common-anchor-header">Qual è la dimensione massima dei vettori supportata da Milvus?</h4><p>Per impostazione predefinita, Milvus può gestire vettori con un massimo di 32.768 dimensioni. È possibile aumentare il valore di <code translate="no">Proxy.maxDimension</code> per consentire un vettore di dimensioni maggiori.</p>
<h4 id="Does-Milvus-support-Apple-M1-CPU" class="common-anchor-header">Milvus supporta la CPU Apple M1?</h4><p>L'attuale versione di Milvus non supporta direttamente la CPU Apple M1. Dopo Milvus 2.3, Milvus fornirà immagini Docker per l'architettura ARM64.</p>
<h4 id="What-data-types-does-Milvus-support-on-the-primary-key-field" class="common-anchor-header">Quali tipi di dati supporta Milvus per il campo chiave primaria?</h4><p>Nella versione attuale, Milvus supporta sia INT64 che stringhe.</p>
<h4 id="Is-Milvus-scalable" class="common-anchor-header">Milvus è scalabile?</h4><p>Sì. È possibile distribuire il cluster Milvus con più nodi tramite Helm Chart su Kubernetes. Per ulteriori istruzioni, consultare la <a href="/docs/it/scaleout.md">Guida alla scalabilità</a>.</p>
<h4 id="Does-the-query-perform-in-memory-What-are-incremental-data-and-historical-data" class="common-anchor-header">La query viene eseguita in memoria? Cosa sono i dati incrementali e i dati storici?</h4><p>Si. Quando arriva una richiesta di query, Milvus cerca sia i dati incrementali che i dati storici caricandoli in memoria. I dati incrementali si trovano nei segmenti in crescita, che vengono bufferizzati in memoria prima che raggiungano la soglia per essere persistiti nel motore di archiviazione, mentre i dati storici provengono dai segmenti sigillati che vengono archiviati nella memoria degli oggetti. I dati incrementali e i dati storici costituiscono l'intero set di dati da ricercare.</p>
<h4 id="Is-Milvus-available-for-concurrent-search" class="common-anchor-header">Milvus è disponibile per la ricerca concorrente?</h4><p>Sì. Per le interrogazioni sulla stessa collezione, Milvus è disponibile per la ricerca simultanea? Per le interrogazioni sulla stessa collezione, Milvus cerca simultaneamente i dati incrementali e storici. Tuttavia, le interrogazioni su collezioni diverse sono condotte in serie. Mentre i dati storici possono essere un insieme di dati estremamente vasto, le ricerche sui dati storici sono relativamente più lunghe ed eseguite essenzialmente in serie.</p>
<h4 id="Why-does-the-data-in-MinIO-remain-after-the-corresponding-collection-is-dropped" class="common-anchor-header">Perché i dati in MinIO rimangono anche dopo che la raccolta corrispondente è stata eliminata?</h4><p>I dati in MinIO sono progettati per rimanere per un certo periodo di tempo per la comodità del rollback dei dati.</p>
<h4 id="Does-Milvus-support-message-engines-other-than-Pulsar" class="common-anchor-header">Milvus supporta motori di messaggi diversi da Pulsar?</h4><p>Sì. Kafka è supportato in Milvus. Kafka è supportato in Milvus 2.1.0.</p>
<h4 id="Whats-the-difference-between-a-search-and-a-query" class="common-anchor-header">Qual è la differenza tra una ricerca e una query?</h4><p>In Milvus, una ricerca per similarità vettoriale recupera i vettori in base al calcolo della similarità e all'accelerazione dell'indice vettoriale. A differenza di una ricerca per similarità vettoriale, una query vettoriale recupera i vettori tramite un filtro scalare basato su un'espressione booleana. L'espressione booleana filtra i campi scalari o il campo chiave primaria e recupera tutti i risultati che corrispondono ai filtri. In una query non sono coinvolti né la metrica di similarità né l'indice vettoriale.</p>
<h4 id="Why-does-a-float-vector-value-have-a-precision-of-7-decimal-digits-in-Milvus" class="common-anchor-header">Perché un valore vettoriale float ha una precisione di 7 cifre decimali in Milvus?</h4><p>Milvus supporta la memorizzazione di vettori come array Float32. Un valore Float32 ha una precisione di 7 cifre decimali. Anche con un valore Float64, come 1,3476964684980388, Milvus lo memorizza come 1,347696. Pertanto, quando si recupera un vettore di questo tipo da Milvus, si perde la precisione del valore Float64.</p>
<h4 id="How-does-Milvus-handle-vector-data-types-and-precision" class="common-anchor-header">Come gestisce Milvus i tipi di dati vettoriali e la precisione?</h4><p>Milvus supporta i tipi di vettore Binary, Float32, Float16 e BFloat16.</p>
<ul>
<li>Vettori binari: Memorizzano dati binari come sequenze di 0 e 1, utilizzati nell'elaborazione delle immagini e nel recupero delle informazioni.</li>
<li>Vettori Float32: Memorizzazione predefinita con una precisione di circa 7 cifre decimali. Anche i valori Float64 sono memorizzati con precisione Float32, con conseguente potenziale perdita di precisione al momento del recupero.</li>
<li>Vettori Float16 e BFloat16: Offrono una precisione e un utilizzo della memoria ridotti. Float16 è adatto per applicazioni con larghezza di banda e memoria limitate, mentre BFloat16 bilancia la portata e l'efficienza, ed è comunemente usato nel deep learning per ridurre i requisiti computazionali senza impattare significativamente sulla precisione.</li>
</ul>
<h4 id="Does-Milvus-support-specifying-default-values-for-scalar-or-vector-fields" class="common-anchor-header">Milvus supporta la specificazione di valori predefiniti per campi scalari o vettoriali?</h4><p>Attualmente, Milvus 2.4.x non supporta la specificazione di valori predefiniti per i campi scalari o vettoriali. Questa funzione è prevista per le prossime versioni.</p>
<h4 id="Still-have-questions" class="common-anchor-header">Avete ancora domande?</h4><p>È possibile:</p>
<ul>
<li>Consultare <a href="https://github.com/milvus-io/milvus/issues">Milvus</a> su GitHub. Siete invitati a porre domande, condividere idee e aiutare gli altri.</li>
<li>Unirsi alla nostra <a href="https://slack.milvus.io/">comunità Slack</a> per trovare supporto e impegnarsi con la nostra comunità open-source.</li>
</ul>
